--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,12 @@
 {
-  "name": "rugalib/ruga-asset-skeleton",
-  "description": "Template for rugalib assets",
-  "homepage": "https://github.com/rugalib",
+  "name": "rugalib/ruga-asset-datatables-searchhighlight",
+  "description": "Search result highlighting for datatables",
+  "homepage": "https://datatables.net/blog/2014-10-22",
   "type": "library",
   "require": {
-    "php": "^7.4"
+    "php": "^7.4",
+    "rugalib/ruga-asset-jquery-highlight": "^3.0",
+    "rugalib/asset-jquery-datatables": "^1.12"
   },
   "repositories": [
     {
@@ -20,13 +22,13 @@
   ],
   "autoload": {
     "psr-4": {
-      "Ruga\\Asset\\Skeleton\\": "src/"
+      "Ruga\\Asset\\datatables_searchhighlight\\": "src/"
     }
   },
   "extra": {
     "laminas": {
-      "component": "Ruga\\Asset\\Skeleton",
-      "config-provider": "Ruga\\Asset\\Skeleton\\ConfigProvider"
+      "component": "Ruga\\Asset\\datatables_searchhighlight",
+      "config-provider": "Ruga\\Asset\\datatables_searchhighlight\\ConfigProvider"
     }
   }
 }
